--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -1,14 +1,15 @@
-@import './colors.scss', './colorstyles.scss', './bootstrap.scss', './buttons.scss';
+@import './colors.scss', './colorstyles.scss', './bootstrap.scss', './buttons.scss', './opacity.scss', './z-index.scss';
 
 body, html {
     margin: 0;
     font-size: 16px;
     font-family: 'Open Sans', sans-serif;
-    box-sizing: border-box;
     background: $grey-lighten-2;
     color: $black;
 }
-
+* {
+    box-sizing: border-box;
+}
 a {
     text-decoration: none;
     color: inherit;
