--- a/client/src/scss/buttons.scss
+++ b/client/src/scss/buttons.scss
@@ -37,24 +37,26 @@
 .btn-hover {
     position: relative;
     z-index: 1;
-    &::before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
-        background: currentColor;
-        opacity: 0;
-        border-radius: inherit;
-        z-index: -1;
-    }
-    &:hover::before {
-        opacity: 0.1;
-    }
-    &:active, &.active {
+    &:not(:disabled) {
         &::before {
-            opacity: 0.05;
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: currentColor;
+            opacity: 0;
+            border-radius: inherit;
+            z-index: -1;
+        }
+        &:hover::before {
+            opacity: 0.1;
+        }
+        &:active, &.active {
+            &::before {
+                opacity: 0.05;
+            }
         }
     }
 }
@@ -101,14 +103,5 @@
     }
     &:active {
         opacity: 0.8;
-    }
-}
-
-@keyframes Loader {
-    0%{
-        transform: rotate(0deg);
-    }   
-    100% {
-        transform: rotate(360deg);
     }
 }
