--- a/client/src/scss/index.scss
+++ b/client/src/scss/index.scss
@@ -1,4 +1,4 @@
-@import './colors.scss', './colorstyles.scss', './bootstrap.scss', './buttons.scss', './opacity.scss', './z-index.scss';
+@import './colors.scss', './colorstyles.scss', './bootstrap.scss', './buttons.scss', './opacity.scss', './z-index.scss', './animation.scss';
 
 body, html {
     margin: 0;
