--- a/client/src/Components/UI/Modal.module.scss
+++ b/client/src/Components/UI/Modal.module.scss
@@ -1,27 +1,41 @@
 .Container {
-    background: rgba($color: #000000, $alpha: 0.2);
-    z-index: 6;
     display: flex;
-    overflow: auto;
-    padding: 2rem 0;
-    right: 0;
-}
-
-.closer, .Container {
     position: fixed;
-    top: 0;
-    left: 0;
-    bottom: 0;
-}
-.closer {
-    right: 16px;
+    height: 100%;
+    width: 100%;
+    overflow: auto;
+    align-items: center;
+    justify-content: center;
 }
 
-.Card {
-    z-index: 1;
-    padding: 2rem;
-    border: solid 1px;
-    margin: auto;
+.Blur{
+    position: fixed;
+    // display: flex;
+    left: 0;
+    right: 16px;
+    // align-items: center;
+    // justify-content: center;
+    // z-index: 5;
+    background-color: lightgray;
+    // width: 98.5%;
+    height: 100%;
+}
+
+.Message {
+    width: 13.5rem;
+    height: 7.25rem;
+    // height: 120vh;
     background-color: white;
-    position: relative;
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    // justify-content: center;
+    justify-content: space-between;
+    // margin: auto;
+}
+
+#modal-wrapper {
+    display: flex;
+    // width: 100%;
+    background-color: green;
 }
