--- a/client/src/scss/all.scss
+++ b/client/src/scss/all.scss
@@ -5,9 +5,34 @@ html, body {
     margin: 0;
     padding: 0;
 }
-body {
-    height: 200vh;
-}
+
 * {
     box-sizing: border-box;
 }
+
+body {
+    height: 150vh;
+    
+    & {
+    background-color: #eee;
+    // width: 200px;
+    // height: 100px;
+    // border: 1px dotted black;
+    overflow-y: scroll; /* Add the ability to scroll y axis*/
+
+   /* Hide scrollbar for IE, Edge and Firefox */
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
+
+    /* Hide scrollbar for Chrome, Safari and Opera */
+    &::-webkit-scrollbar {
+      display: none;
+    }
+}
+   
+
+}
+
+// *{
+//     border: solid 1px lightgray;
+// }
