--- a/client/src/scss/buttons.scss
+++ b/client/src/scss/buttons.scss
@@ -1,3 +1,5 @@
+@import './normal-button.scss', './hover-button.scss', './btn-blank.scss';
+
 .loading {
     display: inline-flex;
     width: 1em;
@@ -9,64 +11,9 @@
     animation: 0.25s infinite linear Loader;
 }
 
-.btn-normal {
-    background-color: transparent;
-    padding: 0;
-    font-size: 1rem;
-    font-family: inherit;
-    line-height: 1.25em;
-    border: none;
-    outline: none;
-    white-space: nowrap;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    text-transform: uppercase;
-    gap: 1em;
-    &:not(:disabled) {
-        cursor: pointer;
-    }
-    &:disabled {
-        cursor: not-allowed;
-        opacity: 0.8;
-    }
-    .material-icons {
-        font-size: 1.5em;
-    }
-}
-.btn-hover {
-    position: relative;
-    z-index: 1;
-    &:not(:disabled) {
-        &::before {
-            content: '';
-            position: absolute;
-            top: 0;
-            left: 0;
-            right: 0;
-            bottom: 0;
-            background: currentColor;
-            opacity: 0;
-            border-radius: inherit;
-            z-index: -1;
-        }
-        &:hover::before {
-            opacity: 0.1;
-        }
-        &:active, &.active {
-            &::before {
-                opacity: 0.05;
-            }
-        }
-    }
-}
 
 .btn-border, .btn-primary {
-    @extend .btn-normal, .btn-hover;
-    padding: 0 1.25em;
-    font-weight: 500;
-    border-radius: 0.2em;
-    height: 2.5em;
+    @extend .btn-normal, .btn-hover, .btn-blank;
 }
 .btn-border {
     &::after {
@@ -87,11 +34,11 @@
 
 .btn-icon {
     @extend .btn-normal, .btn-hover;
-    width: 2.5em;
-    height: 2.5em;
+    width: $height;
+    height: $height;
     border-radius: 50%;
     &.no-padding {
-        margin: -0.475em
+        margin: -0.475em;
     }
 }
 
